# fbs_reader

./: .gitignore  CMakeLists.txt  README.md  clean.sh  fbs_reader.code-workspace  install.sh  mse.fbs  mse_reader.h
pkg/: git-lfs_1.2.1_amd64.deb
src/: CMakeLists.txt  build_cpp.cpp  build_py3.cpp  main.cpp  reader.cpp  reader.h  rl_path.h  rl_string.h
tests/cpp/: CMakeLists.txt  main.cpp  test_generated.h  test_reader.h
tests/fbs/: build.bat  build.sh  build.tool  test.fbs
tests/fbs/flatc/: fbs_reader  flatc_mac  flatc_ubt  flathash  flatsamplebinary  flatsampletext  flattests
tests/py3/: Account.py  Language.py  Pair.py  main.py  test_reader.py
tests/py3/test_fbs/: Account.py
